--- a/index.html
+++ b/index.html
@@ -1559,11 +1559,6 @@
                     <p>Filières</p>
                 </div>
                 <div class="stat-card">
-                    <i class="fas fa-download"></i>
-                    <h3 id="download-count">0</h3>
-                    <p>Téléchargements</p>
-                </div>
-                <div class="stat-card">
                     <i class="fas fa-sync-alt"></i>
                     <h3 id="update-time">24h</h3>
                     <p>Prochaine mise à jour</p>
@@ -2293,7 +2288,6 @@
     const retryBtn = document.getElementById('retry-btn');
     const totalFilesElement = document.getElementById('total-files');
     const totalFilieresElement = document.getElementById('total-filieres');
-    const downloadCountElement = document.getElementById('download-count');
     const updateTimeElement = document.getElementById('update-time');
     const navLinks = document.querySelectorAll('.nav-link');
     const pageSections = document.querySelectorAll('.page-section');
@@ -2838,7 +2832,7 @@
 
             row.innerHTML = `
                 <td>
-                    <a href="${file.downloadLink}" class="file-link" download="${file.name}" onclick="trackDownload()">
+                    <a href="${file.downloadLink}" class="file-link" download="${file.name}" onclick="showDonationModal()">
                         <i class="${file.iconLink} file-icon"></i>
                         ${file.name}
                         ${file.isNew ? '<span class="file-badge new">Nouveau</span>' : ''}
@@ -2889,7 +2883,7 @@
                 </div>
                 <div class="file-card-footer">
                     <span>${formattedDate}</span>
-                    <a href="${file.downloadLink}" class="file-link" download="${file.name}" onclick="trackDownload()">
+                    <a href="${file.downloadLink}" class="file-link" download="${file.name}" onclick="showDonationModal()">
                         <i class="fas fa-download"></i> Télécharger
                     </a>
                 </div>
@@ -2999,11 +2993,6 @@
         errorElement.style.display = 'none';
         emptyStateElement.style.display = 'none';
         filesContentElement.style.display = 'block';
-    }
-
-    // Fonction pour suivre les téléchargements
-    function trackDownload() {
-        showDonationModal();
     }
     </script>
 </body>
