--- a/index.html
+++ b/index.html
@@ -2251,7 +2251,7 @@
     };
      // Configuration simplifiée : Filières → Années → Semestres
     const DRIVE_CONFIG = {
-        apiKey: 'AIzaSyB7RFQGzSFAHRMhq5EA8XK50inK-nHHquA',
+        apiKey: 'AIzaSyB7RFQGzSFAHRMhq5EA8XK50inK-nHHquA'
         // Structure: { filière: { année: { semestre: ID_DOSSIER } } }
         folders: {
             'informatique': {
@@ -3109,3 +3109,4 @@
     </script>
 </body>
 </html>
+
