--- a/index.html
+++ b/index.html
@@ -2250,6 +2250,13 @@
         publicKey: 'nI3VvKfhbDlDyp_cf' // À remplacer
     };
 
+    // Configuration EmailJS - À CONFIGURER AVEC VOS IDS
+    const EMAILJS_CONFIG = {
+        serviceId: 'service_7q3468k', // À remplacer
+        templateId: '1eqk0jt', // À remplacer
+        publicKey: 'nI3VvKfhbDlDyp_cf' // À remplacer
+    };
+
     // Configuration simplifiée : Filières → Années → Semestres
     const DRIVE_CONFIG = {
         apiKey: 'AIzaSyB7RFQGzSFAHRMhq5EA8XK50inK-nHHquA',
@@ -2257,30 +2264,30 @@
         folders: {
             'informatique': {
                 'annee1': {
-                    'semestre1': '1hT2KCs6p4CfP2Y2XrVbadczi-v1yHhdT',
-                    'semestre2': '1zIpa4XHBdhx1kZbeaFNuM4GtY8Tm3pAv'
+                    'semestre1': '1ifAR2Qdp-1pU02hLgXaNzBr7B5rGdWT0',
+                    'semestre2': '1875t_ZzLlFYzw9fiwnpzYCWCIqDmBmJE'
                 },
                 'annee2': {
-                    'semestre1': '1qJjxUPAgFtqxqlXBxMNw1TxD_Nsjuo5s',
-                    'semestre2': '1C-ON8hVo5B3x1DS0X-Gf1G0eq7a5lTiG'
+                    'semestre1': '1TNkeABCC7SzWcyJYSazuSU2nJQ0VZhDF',
+                    'semestre2': '1VgYoHu-fdzf8N6sLhzVYWTtNwDu6uszq'
                 },
                 'annee3': {
-                    'semestre1': '1472bfLXBbxjLLjChsQ_TG_GgWYoV8HHZ',
-                    'semestre2': '12kj5Xk2-jWvwDpO_SfLhpv3ujF8Mdb9A'
+                    'semestre1': '1fX5oIlUtjaqNpNWMcUxz5-CVURooidAy',
+                    'semestre2': '1973ak0m5blMGQdDpkyZtKSO2f6wJ77X4'
                 }
             },
             'gestion': {
                 'annee1': {
-                    'semestre1': 'COLLEZ_ID_GESTION_ANNEE1_SEM1_ICI',
-                    'semestre2': 'COLLEZ_ID_GESTION_ANNEE1_SEM2_ICI'
+                    'semestre1': '1xKrvCyZQsYWb1ukRlzwb-Xism1kt1v-Q',
+                    'semestre2': '17cjdgOUdmBmCkdvRQyOD0em9DlfUlce0'
                 },
                 'annee2': {
-                    'semestre1': 'COLLEZ_ID_GESTION_ANNEE2_SEM1_ICI',
-                    'semestre2': 'COLLEZ_ID_GESTION_ANNEE2_SEM2_ICI'
+                    'semestre1': '1_2c6_MxGrvrTKeEkc3vuoqMzRbbAhP2u',
+                    'semestre2': '107os1ftGtCpphtAcRH63RtbhBwHAokrF'
                 },
                 'annee3': {
-                    'semestre1': 'COLLEZ_ID_GESTION_ANNEE3_SEM1_ICI',
-                    'semestre2': 'COLLEZ_ID_GESTION_ANNEE3_SEM2_ICI'
+                    'semestre1': '13WR7679luMOE8apLbOLiFO7s6Hl9auyn',
+                    'semestre2': '1oPyhgaZz-dwTa3Jyg61mSyiwl_6RQeP6'
                 }
             },
             'college': {
@@ -2289,8 +2296,8 @@
                     'semestre2': 'COLLEZ_ID_6EME_SEM2_ICI'
                 },
                 'cinquieme': {
-                    'semestre1': 'COLLEZ_ID_5EME_SEM1_ICI',
-                    'semestre2': 'COLLEZ_ID_5EME_SEM2_ICI'
+                    'semestre1': '1SIOjvRFmCmOJ7kGzbHxHiFDGcCZRtR2p',
+                    'semestre2': '1SqrFgsny3KE2H7CD_zJaOotyvtnGxzzW'
                 },
                 'quatrieme': {
                     'semestre1': 'COLLEZ_ID_4EME_SEM1_ICI',
@@ -3109,3 +3116,4 @@
     </script>
 </body>
 </html>
+
