Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2142,7 +2142,7 @@
                         <li>Droit de limitation du traitement</li>
                         <li>Droit d'opposition au traitement</li>
                     </ul>
-                    <p>Pour exercer ces droits, veuillez nous contacter à : alessiakanava@gmail.com</p>
+                    <p>Pour exercer ces droits, veuillez nous contacter à : alessiakanava@gmail.com.com</p>
                     
                     <h3>Modifications de la Politique</h3>
                     <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les changements prendront effet immédiatement après leur publication sur cette page.</p>
@@ -2243,13 +2243,6 @@
     </footer>
 
     <script>
-    // Configuration EmailJS - À CONFIGURER AVEC VOS IDS
-    const EMAILJS_CONFIG = {
-        serviceId: 'service_7q3468k', // À remplacer
-        templateId: '1eqk0jt', // À remplacer
-        publicKey: 'nI3VvKfhbDlDyp_cf' // À remplacer
-    };
-
     // Configuration EmailJS - À CONFIGURER AVEC VOS IDS
     const EMAILJS_CONFIG = {
         serviceId: 'service_7q3468k', // À remplacer
@@ -3116,4 +3109,8 @@
     </script>
 </body>
 </html>
+
+
+
+
 
